# parallel_pagerank_algorithm

./: CMakeLists.txt  README.md  graph_generator.py  main.cpp  main_massif.cpp  main_perf.cpp  main_scorep.cpp  speedup_graphs.py  utility.cpp  utility.h
graph/: graph.cpp  graph.h  graph_by_row.cpp  graph_by_row.h
stats/: pagerank_speedup_p2p_Gnutella31.csv  pagerank_speedup_p2p_Gnutella31_v2.csv
